// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GridContent /> > should match snapshot with background 1`] = `
.c3 {
  color: #FFFFFF;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  width: 100%;
  padding: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background-image: url(/assets/images/backgrounds/blue-bg.svg);
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  color: #FFFFFF;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c5 {
  font-size: 2.4rem;
}

.c2 {
  padding: 4.0rem 0 4.0rem;
  text-align: center;
  max-width: 58rem;
  margin: 0 auto;
  width: 100%;
}

.c4 {
  width: 100%;
  overflow-x: hidden;
}

.c4 p {
  font-size: 2.4rem;
  line-height: 1.5;
  margin: 2.4rem 0;
}

.c4 h1,
.c4 h2,
.c4 h3,
.c4 h4,
.c4 h5,
.c4 h6 {
  margin: 4.0rem 0 4.0rem;
  font-weight: 700;
  font-family: var(--font-montserrat);
}

.c4 a {
  color: #dc143c;
  text-decoration: none;
  transition: all 300ms ease-in-out;
}

.c4 a:hover {
  filter: brightness(50%);
}

.c4 ul,
.c4 ol {
  margin: 1.6rem 0;
  padding: 2.4rem 3.2rem;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  text-align: left;
}

.c4 img {
  max-width: 100%;
  height: auto;
}

.c4 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #0A1128;
  margin: 2.4rem 0;
  padding: 2.4rem 3.2rem;
  font-style: italic;
}

.c4 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
  display: block;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.c4 table td,
.c4 table th {
  padding: 1.6rem;
  border: 1px solid #DDDDDD;
  text-align: left;
  min-width: 15rem;
}

.c4 table th {
  background: #0A1128;
  color: #FFFFFF;
}

@media (max-width: 768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

@media (min-width: 768px) {
  .c4 table {
    display: table;
  }
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Our Digital Solutions
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            
    
            <h2>
              Transform Your Business with Our Solutions
            </h2>
            
    
            <p>
              
      We are experts in developing 
              <strong>
                innovative
              </strong>
               and 
              <strong>
                customized
              </strong>
               
      solutions for companies looking to stand out in the digital market. Our team combines technical 
      expertise with strategic vision to deliver exceptional results.
    
            </p>
            

    
            <h3>
              Why choose our company?
            </h3>
            

    
            <ul>
              
      
              <li>
                
        
                <strong>
                  Proven Experience
                </strong>
                 - Over 10 years transforming ideas into 
        successful digital solutions
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Cutting-edge Technology
                </strong>
                 - We use the latest market technologies 
        to ensure performance and security
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Dedicated Support
                </strong>
                 - Team always available to assist 
        in all stages of the project
      
              </li>
              
    
            </ul>
            

    
            <blockquote>
              
      "The partnership with the company was fundamental to our business's digital growth. 
      The team is extremely professional and dedicated."
      
              <cite>
                - Maria Silva, CEO of TechCorp
              </cite>
              
    
            </blockquote>
            

    
            <h3>
              Our Services
            </h3>
            

    
            <p>
              
      We offer a complete range of digital services to boost your business:
    
            </p>
            

    
            <table>
              
      
              <thead>
                
        
                <tr>
                  
          
                  <th>
                    Service
                  </th>
                  
          
                  <th>
                    Benefits
                  </th>
                  
        
                </tr>
                
      
              </thead>
              
      
              <tbody>
                
        
                <tr>
                  
          
                  <td>
                    Web Development
                  </td>
                  
          
                  <td>
                    Responsive, fast, and SEO-optimized websites
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    Digital Marketing
                  </td>
                  
          
                  <td>
                    Customized strategies to increase your online presence
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    E-commerce
                  </td>
                  
          
                  <td>
                    Robust and secure platforms for online sales
                  </td>
                  
        
                </tr>
                
      
              </tbody>
              
    
            </table>
            

    
            <h3>
              Technologies we use
            </h3>
            
    
            <p>
              
      We work with the most modern technologies in the market, including 
      
              <code>
                React
              </code>
              , 
              <code>
                Node.js
              </code>
              , and 
              <code>
                Python
              </code>
              . 
      Our stack is constantly updated to ensure the best solutions.
    
            </p>
            

    
            <h3>
              Contact us
            </h3>
            
    
            <p>
              
      Want to know more about how we can help your business? 
      
              <a
                href="#contact"
              >
                Click here
              </a>
               to speak with one of our consultants or 
      send an email to 
              <a
                href="mailto:contact@company.com"
              >
                contact@company.com
              </a>
              
    
            </p>
            
  
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridContent /> > should match snapshot without background 1`] = `
.c3 {
  color: #0A1128;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  width: 100%;
  padding: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c5 {
  font-size: 2.4rem;
}

.c2 {
  padding: 4.0rem 0 4.0rem;
  text-align: center;
  max-width: 58rem;
  margin: 0 auto;
  width: 100%;
}

.c4 {
  width: 100%;
  overflow-x: hidden;
}

.c4 p {
  font-size: 2.4rem;
  line-height: 1.5;
  margin: 2.4rem 0;
}

.c4 h1,
.c4 h2,
.c4 h3,
.c4 h4,
.c4 h5,
.c4 h6 {
  margin: 4.0rem 0 4.0rem;
  font-weight: 700;
  font-family: var(--font-montserrat);
}

.c4 a {
  color: #dc143c;
  text-decoration: none;
  transition: all 300ms ease-in-out;
}

.c4 a:hover {
  filter: brightness(50%);
}

.c4 ul,
.c4 ol {
  margin: 1.6rem 0;
  padding: 2.4rem 3.2rem;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  text-align: left;
}

.c4 img {
  max-width: 100%;
  height: auto;
}

.c4 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #0A1128;
  margin: 2.4rem 0;
  padding: 2.4rem 3.2rem;
  font-style: italic;
}

.c4 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
  display: block;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.c4 table td,
.c4 table th {
  padding: 1.6rem;
  border: 1px solid #DDDDDD;
  text-align: left;
  min-width: 15rem;
}

.c4 table th {
  background: #0A1128;
  color: #FFFFFF;
}

@media (max-width: 768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

@media (min-width: 768px) {
  .c4 table {
    display: table;
  }
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Our Digital Solutions
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            
    
            <h2>
              Transform Your Business with Our Solutions
            </h2>
            
    
            <p>
              
      We are experts in developing 
              <strong>
                innovative
              </strong>
               and 
              <strong>
                customized
              </strong>
               
      solutions for companies looking to stand out in the digital market. Our team combines technical 
      expertise with strategic vision to deliver exceptional results.
    
            </p>
            

    
            <h3>
              Why choose our company?
            </h3>
            

    
            <ul>
              
      
              <li>
                
        
                <strong>
                  Proven Experience
                </strong>
                 - Over 10 years transforming ideas into 
        successful digital solutions
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Cutting-edge Technology
                </strong>
                 - We use the latest market technologies 
        to ensure performance and security
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Dedicated Support
                </strong>
                 - Team always available to assist 
        in all stages of the project
      
              </li>
              
    
            </ul>
            

    
            <blockquote>
              
      "The partnership with the company was fundamental to our business's digital growth. 
      The team is extremely professional and dedicated."
      
              <cite>
                - Maria Silva, CEO of TechCorp
              </cite>
              
    
            </blockquote>
            

    
            <h3>
              Our Services
            </h3>
            

    
            <p>
              
      We offer a complete range of digital services to boost your business:
    
            </p>
            

    
            <table>
              
      
              <thead>
                
        
                <tr>
                  
          
                  <th>
                    Service
                  </th>
                  
          
                  <th>
                    Benefits
                  </th>
                  
        
                </tr>
                
      
              </thead>
              
      
              <tbody>
                
        
                <tr>
                  
          
                  <td>
                    Web Development
                  </td>
                  
          
                  <td>
                    Responsive, fast, and SEO-optimized websites
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    Digital Marketing
                  </td>
                  
          
                  <td>
                    Customized strategies to increase your online presence
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    E-commerce
                  </td>
                  
          
                  <td>
                    Robust and secure platforms for online sales
                  </td>
                  
        
                </tr>
                
      
              </tbody>
              
    
            </table>
            

    
            <h3>
              Technologies we use
            </h3>
            
    
            <p>
              
      We work with the most modern technologies in the market, including 
      
              <code>
                React
              </code>
              , 
              <code>
                Node.js
              </code>
              , and 
              <code>
                Python
              </code>
              . 
      Our stack is constantly updated to ensure the best solutions.
    
            </p>
            

    
            <h3>
              Contact us
            </h3>
            
    
            <p>
              
      Want to know more about how we can help your business? 
      
              <a
                href="#contact"
              >
                Click here
              </a>
               to speak with one of our consultants or 
      send an email to 
              <a
                href="mailto:contact@company.com"
              >
                contact@company.com
              </a>
              
    
            </p>
            
  
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridContent /> > should render grid content 1`] = `
.c3 {
  color: #0A1128;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  width: 100%;
  padding: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c5 {
  font-size: 2.4rem;
}

.c2 {
  padding: 4.0rem 0 4.0rem;
  text-align: center;
  max-width: 58rem;
  margin: 0 auto;
  width: 100%;
}

.c4 {
  width: 100%;
  overflow-x: hidden;
}

.c4 p {
  font-size: 2.4rem;
  line-height: 1.5;
  margin: 2.4rem 0;
}

.c4 h1,
.c4 h2,
.c4 h3,
.c4 h4,
.c4 h5,
.c4 h6 {
  margin: 4.0rem 0 4.0rem;
  font-weight: 700;
  font-family: var(--font-montserrat);
}

.c4 a {
  color: #dc143c;
  text-decoration: none;
  transition: all 300ms ease-in-out;
}

.c4 a:hover {
  filter: brightness(50%);
}

.c4 ul,
.c4 ol {
  margin: 1.6rem 0;
  padding: 2.4rem 3.2rem;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  text-align: left;
}

.c4 img {
  max-width: 100%;
  height: auto;
}

.c4 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #0A1128;
  margin: 2.4rem 0;
  padding: 2.4rem 3.2rem;
  font-style: italic;
}

.c4 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
  display: block;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.c4 table td,
.c4 table th {
  padding: 1.6rem;
  border: 1px solid #DDDDDD;
  text-align: left;
  min-width: 15rem;
}

.c4 table th {
  background: #0A1128;
  color: #FFFFFF;
}

@media (max-width: 768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

@media (min-width: 768px) {
  .c4 table {
    display: table;
  }
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Our Digital Solutions
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            
    
            <h2>
              Transform Your Business with Our Solutions
            </h2>
            
    
            <p>
              
      We are experts in developing 
              <strong>
                innovative
              </strong>
               and 
              <strong>
                customized
              </strong>
               
      solutions for companies looking to stand out in the digital market. Our team combines technical 
      expertise with strategic vision to deliver exceptional results.
    
            </p>
            

    
            <h3>
              Why choose our company?
            </h3>
            

    
            <ul>
              
      
              <li>
                
        
                <strong>
                  Proven Experience
                </strong>
                 - Over 10 years transforming ideas into 
        successful digital solutions
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Cutting-edge Technology
                </strong>
                 - We use the latest market technologies 
        to ensure performance and security
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Dedicated Support
                </strong>
                 - Team always available to assist 
        in all stages of the project
      
              </li>
              
    
            </ul>
            

    
            <blockquote>
              
      "The partnership with the company was fundamental to our business's digital growth. 
      The team is extremely professional and dedicated."
      
              <cite>
                - Maria Silva, CEO of TechCorp
              </cite>
              
    
            </blockquote>
            

    
            <h3>
              Our Services
            </h3>
            

    
            <p>
              
      We offer a complete range of digital services to boost your business:
    
            </p>
            

    
            <table>
              
      
              <thead>
                
        
                <tr>
                  
          
                  <th>
                    Service
                  </th>
                  
          
                  <th>
                    Benefits
                  </th>
                  
        
                </tr>
                
      
              </thead>
              
      
              <tbody>
                
        
                <tr>
                  
          
                  <td>
                    Web Development
                  </td>
                  
          
                  <td>
                    Responsive, fast, and SEO-optimized websites
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    Digital Marketing
                  </td>
                  
          
                  <td>
                    Customized strategies to increase your online presence
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    E-commerce
                  </td>
                  
          
                  <td>
                    Robust and secure platforms for online sales
                  </td>
                  
        
                </tr>
                
      
              </tbody>
              
    
            </table>
            

    
            <h3>
              Technologies we use
            </h3>
            
    
            <p>
              
      We work with the most modern technologies in the market, including 
      
              <code>
                React
              </code>
              , 
              <code>
                Node.js
              </code>
              , and 
              <code>
                Python
              </code>
              . 
      Our stack is constantly updated to ensure the best solutions.
    
            </p>
            

    
            <h3>
              Contact us
            </h3>
            
    
            <p>
              
      Want to know more about how we can help your business? 
      
              <a
                href="#contact"
              >
                Click here
              </a>
               to speak with one of our consultants or 
      send an email to 
              <a
                href="mailto:contact@company.com"
              >
                contact@company.com
              </a>
              
    
            </p>
            
  
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridContent /> > should render grid content with background 1`] = `
.c3 {
  color: #FFFFFF;
  font-size: 6.4rem;
  text-transform: uppercase;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  width: 100%;
  padding: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background-image: url(/assets/images/backgrounds/blue-bg.svg);
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  color: #FFFFFF;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c5 {
  font-size: 2.4rem;
}

.c2 {
  padding: 4.0rem 0 4.0rem;
  text-align: center;
  max-width: 58rem;
  margin: 0 auto;
  width: 100%;
}

.c4 {
  width: 100%;
  overflow-x: hidden;
}

.c4 p {
  font-size: 2.4rem;
  line-height: 1.5;
  margin: 2.4rem 0;
}

.c4 h1,
.c4 h2,
.c4 h3,
.c4 h4,
.c4 h5,
.c4 h6 {
  margin: 4.0rem 0 4.0rem;
  font-weight: 700;
  font-family: var(--font-montserrat);
}

.c4 a {
  color: #dc143c;
  text-decoration: none;
  transition: all 300ms ease-in-out;
}

.c4 a:hover {
  filter: brightness(50%);
}

.c4 ul,
.c4 ol {
  margin: 1.6rem 0;
  padding: 2.4rem 3.2rem;
}

.c4 ul {
  list-style: disc;
}

.c4 ol {
  list-style: decimal;
}

.c4 li {
  text-align: left;
}

.c4 img {
  max-width: 100%;
  height: auto;
}

.c4 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #0A1128;
  margin: 2.4rem 0;
  padding: 2.4rem 3.2rem;
  font-style: italic;
}

.c4 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
  display: block;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.c4 table td,
.c4 table th {
  padding: 1.6rem;
  border: 1px solid #DDDDDD;
  text-align: left;
  min-width: 15rem;
}

.c4 table th {
  background: #0A1128;
  color: #FFFFFF;
}

@media (max-width: 768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

@media (min-width: 768px) {
  .c4 table {
    display: table;
  }
}

<div>
  <div
    class="c0"
    id=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Our Digital Solutions
        </h2>
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            
    
            <h2>
              Transform Your Business with Our Solutions
            </h2>
            
    
            <p>
              
      We are experts in developing 
              <strong>
                innovative
              </strong>
               and 
              <strong>
                customized
              </strong>
               
      solutions for companies looking to stand out in the digital market. Our team combines technical 
      expertise with strategic vision to deliver exceptional results.
    
            </p>
            

    
            <h3>
              Why choose our company?
            </h3>
            

    
            <ul>
              
      
              <li>
                
        
                <strong>
                  Proven Experience
                </strong>
                 - Over 10 years transforming ideas into 
        successful digital solutions
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Cutting-edge Technology
                </strong>
                 - We use the latest market technologies 
        to ensure performance and security
      
              </li>
              
      
              <li>
                
        
                <strong>
                  Dedicated Support
                </strong>
                 - Team always available to assist 
        in all stages of the project
      
              </li>
              
    
            </ul>
            

    
            <blockquote>
              
      "The partnership with the company was fundamental to our business's digital growth. 
      The team is extremely professional and dedicated."
      
              <cite>
                - Maria Silva, CEO of TechCorp
              </cite>
              
    
            </blockquote>
            

    
            <h3>
              Our Services
            </h3>
            

    
            <p>
              
      We offer a complete range of digital services to boost your business:
    
            </p>
            

    
            <table>
              
      
              <thead>
                
        
                <tr>
                  
          
                  <th>
                    Service
                  </th>
                  
          
                  <th>
                    Benefits
                  </th>
                  
        
                </tr>
                
      
              </thead>
              
      
              <tbody>
                
        
                <tr>
                  
          
                  <td>
                    Web Development
                  </td>
                  
          
                  <td>
                    Responsive, fast, and SEO-optimized websites
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    Digital Marketing
                  </td>
                  
          
                  <td>
                    Customized strategies to increase your online presence
                  </td>
                  
        
                </tr>
                
        
                <tr>
                  
          
                  <td>
                    E-commerce
                  </td>
                  
          
                  <td>
                    Robust and secure platforms for online sales
                  </td>
                  
        
                </tr>
                
      
              </tbody>
              
    
            </table>
            

    
            <h3>
              Technologies we use
            </h3>
            
    
            <p>
              
      We work with the most modern technologies in the market, including 
      
              <code>
                React
              </code>
              , 
              <code>
                Node.js
              </code>
              , and 
              <code>
                Python
              </code>
              . 
      Our stack is constantly updated to ensure the best solutions.
    
            </p>
            

    
            <h3>
              Contact us
            </h3>
            
    
            <p>
              
      Want to know more about how we can help your business? 
      
              <a
                href="#contact"
              >
                Click here
              </a>
               to speak with one of our consultants or 
      send an email to 
              <a
                href="mailto:contact@company.com"
              >
                contact@company.com
              </a>
              
    
            </p>
            
  
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
